--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+# Configure datasource as in-memory
+spring.datasource.url=jdbc:h2:mem:database
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=false
+#Configure auth datasource
+spring.datasource.username=admin
+spring.datasource.password=
+
 spring.jpa.show-sql=false
 #To beautify prints of SQL
 spring.jpa.properties.hibernate.format_sql=true
