--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.4.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/> <!-- lookup parent from com.stacktrace.exam.educationserver.repository -->
 	</parent>
 	<groupId>com.stacktrace.exam</groupId>
 	<artifactId>education-server</artifactId>
