--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.h2.console.enabled=false
 spring.datasource.username=admin
 spring.datasource.password=
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 #To beautify prints of SQL
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8888
