--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,12 @@
 spring.datasource.url=jdbc:h2:mem:database
 spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=false
-
 #Configure auth datasource
 spring.datasource.username=admin
 spring.datasource.password=
 
+#Init Database with /resources/schema.sql and /resources/data.sql
+spring.jpa.hibernate.ddl-auto=none
 #To beautify prints of SQL
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
