--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=
 #Init Database with /resources/schema.sql and /resources/data.sql
 spring.jpa.hibernate.ddl-auto=none
 #To beautify prints of SQL
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 server.port=8888
